# SSOAutoConfig

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PCH.h  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
src/: main.cpp
